# yolov4_trt_ros

./: CMakeLists.txt  trt_yolo_v3.py  trt_yolo_v4.py  trt_yolo_v4_batch.py
dependencies/: install_protobuf-3.8.0.sh  install_pycuda.sh
launch/: yolov3_trt.launch  yolov4_trt.launch
utils/: yolo_classes.py
